# simpleinflux

./: LICENSE  README.md  pyproject.toml
simpleinflux/: __init__.py  simpleinflux.py
test/: fixtures.py  test.py  test_basic.py  test_special_range.py
