[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simpleinflux"
authors = [{name = "Christoph Kattmann", email = "christoph.kattmann@gmail.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ckattmann/simpleinflux"
